Initial commit for the first project

--- a/popup.html
+++ b/popup.html
@@ -6,5 +6,9 @@
     <div class="title">Your bookmarks for this video</div>
 
     <div class="bookmarks" id="bookmarks"></div>
+
+    <div class="autopause-container">
+      <button id="autopause-btn">Enable AutoPause</button>
+    </div>
   </div>
 </div>
